webapp/src/main/webapp/public/resources/style.css
/* ... */
@media (min-width: 600px) {
    .tab-container > .label {
        width: auto;
    }
}

.tab-content-pane {
    background: #fff;
    display: none;
    padding: 20px 30px 30px;
    width: 100%;
}

@media (min-width: 600px) {
    .tab-content-pane {
        order: 99;
    }
}

.input:checked + .label + .tab-content-pane {
    display: block;
}

.tab-container > .tab-end {
    border-bottom: 1px solid #6a6f71;
    left: 0;
    width: 100%;
}

/*This targets only IE*/
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .tab-container > .tab-end {
        height: 7px;
    }
}

table.ias-table, table.ias-table td {
    border: none;
}

.helpdesk-wrapper #centerbody {
    overflow: auto;
}

.pwm-status-message {
    background-color: #eef2f2;
    border-radius: 3px;
    border: 1px solid #dae1e1;
    box-sizing: border-box;
    font-size: 15px;
    margin: 15px 0;
    max-width: 750px;
    padding: 15px;
    width: 100%;
}

.pwm-status-message p {
    color: #808080;
    font-size: 14px;
    margin: 10px 0 0;
}

.pwm-status-message-title {
    color: #434c50;
    font-weight: bold;
}

.pwm-status-message-title span, .pwm-status-message-title .pwm-icon {
    vertical-align: middle;
}

.pwm-status-message-title .pwm-icon {
    color: inherit;
    display: inline-block;
    font-size: 25px;
    height: 1em;
    line-height: 1em;
    margin-right: 5px;
    width: 1em;
}

[dir="rtl"] .pwm-status-message-title .pwm-icon {
    margin-left: 5px;
    margin-right: initial;
}

.pwm-status-message-title .pwm-icon.pwm-warn {
    color: #f17e12;
}

.pwm-icon-status_warn_thick:before {
    content: "\f192";
}

.ias-fill {
    display: inline-block;
}

#analysis-topLevelTab .dgrid-resize-header-container {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#analysis-topLevelTab .dgrid-scroller {
    margin-top: 23px !important;
}

#certDebugGrid .dgrid-hider-toggle {
    z-index: 900;
}

.formfield-photo {
    border: solid 1px;
    width: auto;
    height: 80px;
}

.formfield-photo-missing {
    background-image: url("UserPhoto.png");
    background-repeat: no-repeat;
    background-size: 100px 100px;
    width: auto;
    height: 80px;
}

.hidden {
   display: none;
}

.logViewer {
    border: 0;
    background-color: #DDDDDD;
    border-radius: 7px;
    padding: 10px;
    height: auto;
    min-height: 100px;
    max-height: 50vh;
    overflow: auto;
    font-family: monospace;
    white-space: pre;
}

